apps/archive/bookshelf/bookshelf-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bookshelf-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://bookshelf.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Bookshelf"
    gethomepage.dev/description: "Ebook organizer/manager"
    gethomepage.dev/app: bookshelf
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "mdi-bookshelf"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`bookshelf.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: bookshelf
          port: 8787
  tls: {}
